// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Turn Order | Configuration | selectors should get the available turnorder cards with getAvailableCards() 1`] = `
Array [
  Object {
    "id": "player1-1",
    "name": "Player 1",
    "type": "player1",
  },
  Object {
    "id": "player1-2",
    "name": "Player 1",
    "type": "player1",
  },
  Object {
    "id": "player1-3",
    "name": "Player 1",
    "type": "player1",
  },
  Object {
    "id": "nemesis-1",
    "name": "Nemesis",
    "type": "nemesis",
  },
  Object {
    "id": "nemesis-2",
    "name": "Nemesis",
    "type": "nemesis",
  },
]
`;

exports[`Turn Order | Configuration | selectors should get the correct mode with getMode() 1`] = `"Default"`;

exports[`Turn Order | Configuration | selectors should get the correct player count with getSelectedPlayerCount() 1`] = `
Object {
  "id": "onePlayer",
  "name": "1",
  "variations": Object {
    "34alternating": Object {
      "id": "34alternating",
      "name": "3/4 Cards alternating",
      "turnOrderCards": Array [
        Object {
          "id": "player1-1",
          "name": "Player 1",
          "type": "player1",
        },
        Object {
          "id": "player1-2",
          "name": "Player 1",
          "type": "player1",
        },
        Object {
          "id": "player1-3",
          "name": "Player 1",
          "type": "player1",
        },
        Object {
          "alternate": true,
          "id": "player-1-alternating",
          "name": "Player 1 (alternate)",
          "type": "player1",
        },
        Object {
          "id": "nemesis-1",
          "name": "Nemesis",
          "type": "nemesis",
        },
        Object {
          "id": "nemesis-2",
          "name": "Nemesis",
          "type": "nemesis",
        },
      ],
    },
    "4toc": Object {
      "id": "4toc",
      "name": "4 ToC",
      "turnOrderCards": Array [
        Object {
          "id": "player1-1",
          "name": "Player 1",
          "type": "player1",
        },
        Object {
          "id": "player1-2",
          "name": "Player 1",
          "type": "player1",
        },
        Object {
          "id": "player1-3",
          "name": "Player 1",
          "type": "player1",
        },
        Object {
          "id": "player1-4",
          "name": "Player 1",
          "type": "player1",
        },
        Object {
          "id": "nemesis-1",
          "name": "Nemesis",
          "type": "nemesis",
        },
        Object {
          "id": "nemesis-2",
          "name": "Nemesis",
          "type": "nemesis",
        },
      ],
    },
    "default": Object {
      "id": "default",
      "name": "Default (3 ToC)",
      "turnOrderCards": Array [
        Object {
          "id": "player1-1",
          "name": "Player 1",
          "type": "player1",
        },
        Object {
          "id": "player1-2",
          "name": "Player 1",
          "type": "player1",
        },
        Object {
          "id": "player1-3",
          "name": "Player 1",
          "type": "player1",
        },
        Object {
          "id": "nemesis-1",
          "name": "Nemesis",
          "type": "nemesis",
        },
        Object {
          "id": "nemesis-2",
          "name": "Nemesis",
          "type": "nemesis",
        },
      ],
    },
  },
}
`;

exports[`Turn Order | Configuration | selectors should get the correct setup with getSelectedSetup() 1`] = `
Object {
  "id": "default",
  "name": "Default (3 ToC)",
  "turnOrderCards": Array [
    Object {
      "id": "player1-1",
      "name": "Player 1",
      "type": "player1",
    },
    Object {
      "id": "player1-2",
      "name": "Player 1",
      "type": "player1",
    },
    Object {
      "id": "player1-3",
      "name": "Player 1",
      "type": "player1",
    },
    Object {
      "id": "nemesis-1",
      "name": "Nemesis",
      "type": "nemesis",
    },
    Object {
      "id": "nemesis-2",
      "name": "Nemesis",
      "type": "nemesis",
    },
  ],
}
`;

exports[`Turn Order | Configuration | selectors should get the current configuration with getConfiguration() 1`] = `
Object {
  "id": "default",
  "name": "Default (3 ToC)",
  "turnOrderCards": Array [
    Object {
      "id": "player1-1",
      "name": "Player 1",
      "type": "player1",
    },
    Object {
      "id": "player1-2",
      "name": "Player 1",
      "type": "player1",
    },
    Object {
      "id": "player1-3",
      "name": "Player 1",
      "type": "player1",
    },
    Object {
      "id": "nemesis-1",
      "name": "Nemesis",
      "type": "nemesis",
    },
    Object {
      "id": "nemesis-2",
      "name": "Nemesis",
      "type": "nemesis",
    },
  ],
}
`;
